--- a/environment/ingress.yaml
+++ b/environment/ingress.yaml
@@ -1,11 +1,18 @@
-apiVersion: v1
-kind: Service
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: album-viewer-service
+  name: album-viewer-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  selector:
-    app: albumviewer
-  ports:
-    - protocol: TCP
-      port: 80        # Expuesto en el cluster
-      targetPort: 80  # Puerto interno del contenedor
+  rules:
+    - host: albumviewer.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: album-viewer-service
+                port:
+                  number: 80
