--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,8 +101,8 @@ stages:
       steps:
         - script: |
             echo "Cleaning up old resources..."
-            kubectl delete -f environment/ --ignore-not-found=true
-            echo "Deploying the application..."
-            kubectl apply -f $(k8sYamlPath)/album-viewer.yaml
-            kubectl get pods -o wide
-          displayName: "Deploy App"
+            kubectl delete -f $(k8sYamlPath) --ignore-not-found=true
+            echo "Deploying all manifests..."
+            kubectl apply -f $(k8sYamlPath)
+            kubectl get all
+          displayName: "Clean and Deploy all resources"
