--- a/environment/ingress.yaml
+++ b/environment/ingress.yaml
@@ -3,16 +3,17 @@ kind: Ingress
 metadata:
   name: album-viewer-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
-    - host: albumviewer.local
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: album-viewer-service
-                port:
-                  number: 80
+  - host: albumviewer.local
+    http:
+      paths:
+      - path: /album-viewer(/|$)(.*)
+        pathType: ImplementationSpecific
+        backend:
+          service:
+            name: album-viewer-service
+            port:
+              number: 80
